[package]
name = "libupkg"
version = "0.1.0"
edition = "2021"
description = "UPKG Backend, can be used in other projects"
readme = "README.md"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.10"}
tokio = { version = "1.17.0", features = ["full"] }
error-chain = "0.12.2"
