[package]
name = "libupkg"
version = "0.1.0"
edition = "2021"
description = "UPKG Backend, can be used in other projects"
readme = "README.md"
license = "BSD-2-Clause"

[lib]
name = "upkg"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cargo-crate-type = "0.1.0"